--- a/src/app/components/shared/stream-video/stream-video.component.html
+++ b/src/app/components/shared/stream-video/stream-video.component.html
@@ -2,7 +2,7 @@
 
     <video #videoElement class="w-100"></video>
     <div *ngIf="_streamManager" class="comment-container">
-        <div class="position-relative comment">
+        <!-- <div class="position-relative comment">
             <div id="comments" class="comment-list">
                 <div class="comment-item" *ngFor="let comment of listComment">
                     <div class="d-flex align-items-center mt-2">
@@ -20,7 +20,7 @@
                 <input type="text" class="form-control" placeholder="Enter your comment" [(ngModel)]="commentContent"
                     (keyup.enter)="onComment()" />
             </div>
-        </div>
+        </div> -->
 
     </div>
 </div>
