--- a/src/app/components/user-pages/merchant-request/merchant-request.component.html
+++ b/src/app/components/user-pages/merchant-request/merchant-request.component.html
@@ -30,7 +30,8 @@
             <div class="input-textbox d-flex justify-content-center w-100">
                 <span class="m-4 my-2 w-100">
                     <h6 class="mb-1">Phone Number</h6>
-                    <input class="w-100 rounded-2 p-2 mb-3" type="text" pInputText formControlName="phoneNumber" />
+                    <input class="w-100 rounded-2 p-2 mb-3" type="text" pKeyFilter="num" pInputText
+                        formControlName="phoneNumber" />
                 </span>
             </div>
             <!-- <div class="input-textbox d-flex justify-content-start w-100">
