--- a/src/app/components/user-pages/live-detail/live-detail.component.scss
+++ b/src/app/components/user-pages/live-detail/live-detail.component.scss
@@ -30,3 +30,27 @@
 .w-80 {
     width: 80px;
 }
+
+.max-height-60 {
+    max-height: 52vh;
+    overflow: auto;
+}
+
+.height-60 {
+    max-height: 52vh;
+    min-height: 52vh;
+    height: 52vh;
+    overflow: auto;
+}
+
+.comment-input {
+    bottom: 20px;
+    position: absolute;
+    width: 75%;
+    input {
+        width: 100%;
+        border-radius: 20px;
+        font-size: 1rem;
+        padding: 0.5rem 1rem;
+    }
+}
