--- a/src/app/components/merchant-pages/live/live.component.scss
+++ b/src/app/components/merchant-pages/live/live.component.scss
@@ -53,3 +53,11 @@
 input[type="file"] {
     display: none;
 }
+
+.loading {
+    height: 95%;
+    width: 95%;
+    z-index: 2;
+    opacity: 0.8;
+    background-color: white;
+}
