--- a/src/app/components/merchant-pages/admin-live/admin-live.component.html
+++ b/src/app/components/merchant-pages/admin-live/admin-live.component.html
@@ -1,1 +1,76 @@
-<p>admin-live works!</p>
+<div class="grid">
+    <div class="col-12">
+        <div class="card px-6 py-6">
+            <p-table #dt [value]="listLive" responsiveLayout="scroll" [rows]="10" [globalFilterFields]="[
+                                'name',
+                                'price',
+                                'brand.name',
+                                'subCategory.category.name'
+                            ]" [paginator]="true" [rowsPerPageOptions]="[10, 20, 30]" [showCurrentPageReport]="true"
+                currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" selectionMode="multiple"
+                [rowHover]="true" dataKey="id">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th pSortableColumn="merchantId">
+                            ID <p-sortIcon field="merchantId"></p-sortIcon>
+                        </th>
+                        <th>Name</th>
+                        <th pSortableColumn="createdDate">
+                            Created Date
+                            <p-sortIcon field="createdDate"></p-sortIcon>
+                        </th>
+                        <th pSortableColumn="phoneNumber">
+                            Phone <p-sortIcon field="phoneNumber"></p-sortIcon>
+                        </th>
+
+                        <th pSortableColumn="cityName">
+                            City
+                            <p-sortIcon field="cityName"></p-sortIcon>
+                        </th>
+                        <th pSortableColumn="rating">
+                            Rating <p-sortIcon field="rating"></p-sortIcon>
+                        </th>
+
+                        <th></th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-product>
+                    <tr>
+                        <td style="width: 14%; min-width: 10rem">
+                            <span class="p-column-title">Name</span>
+                            {{ product.merchantId }}
+                        </td>
+
+                        <td>
+                            <span>
+                                {{ product.merchantName }}
+                            </span>
+                        </td>
+                        <td style="width: 14%; min-width: 8rem">
+                            <span class="p-column-title">Created Date</span>
+                            {{ product.createdDate | date }}
+                        </td>
+                        <td style="width: 14%; min-width: 10rem">
+                            <span class="p-column-title">Phone Number</span>
+                            {{ product.phoneNumber }}
+                        </td>
+                        <td style="width: 14%; min-width: 10rem">
+                            <span class="p-column-title">Rating</span>
+                            <p-rating [ngModel]="product.rating || 0" [readonly]="true" [cancel]="false"></p-rating>
+                        </td>
+
+                        <td>
+                            <div class="flex">
+                                <button pButton pRipple icon="pi pi-pencil"
+                                    class="p-button-rounded p-button-success mr-2"
+                                    (click)="onRowSelect(product)"></button>
+                            </div>
+                        </td>
+                    </tr>
+                </ng-template>
+            </p-table>
+            <p-paginator [alwaysShow]="false" (onPageChange)="onPageChange($event)" [first]="first" [rows]="10"
+                [totalRecords]="totalRecords"></p-paginator>
+        </div>
+    </div>
+</div>
