--- a/src/app/components/merchant-pages/live/live.component.html
+++ b/src/app/components/merchant-pages/live/live.component.html
@@ -175,6 +175,8 @@
                                 </tr>
                             </ng-template>
                         </p-table>
+                        <p-paginator [alwaysShow]="false" (onPageChange)="onPageChange($event)" [first]="first"
+                            [rows]="10" [totalRecords]="totalRecords"></p-paginator>
                     </div>
                 </div>
                 <div *ngIf="isLiveSuccess" class="col-12 xl:col-4">
