--- a/src/app/components/merchant-pages/merchant/merchant-request/merchant-request.component.html
+++ b/src/app/components/merchant-pages/merchant/merchant-request/merchant-request.component.html
@@ -6,9 +6,7 @@
                                 'price',
                                 'brand.name',
                                 'subCategory.category.name'
-                            ]" [paginator]="true" [rowsPerPageOptions]="[10, 20, 30]" [showCurrentPageReport]="true"
-                currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" selectionMode="multiple"
-                [rowHover]="true" dataKey="id">
+                            ]" selectionMode="multiple" [rowHover]="true" dataKey="id">
                 <ng-template pTemplate="header">
                     <tr>
                         <th pSortableColumn="merchantId">
@@ -54,9 +52,13 @@
                             <span class="p-column-title">Phone Number</span>
                             {{ merchant.phoneNumber }}
                         </td>
+                        <td>
+                            <span class="p-column-title">Rating</span>
+                            {{merchant.city || 'Unknown'}}
+                        </td>
                         <td style="width: 14%; min-width: 10rem">
                             <span class="p-column-title">Rating</span>
-                            <p-rating [ngModel]="merchant.rating || 0" [readonly]="true" [cancel]="false"></p-rating>
+                            <p-rating [(ngModel)]="merchant.rating" [readonly]="true" [cancel]="false"></p-rating>
                         </td>
 
                         <td>
@@ -69,6 +71,8 @@
                     </tr>
                 </ng-template>
             </p-table>
+            <p-paginator [alwaysShow]="false" (onPageChange)="onPageChange($event)" [first]="first" [rows]="10"
+                [totalRecords]="totalRecords"></p-paginator>
         </div>
     </div>
 </div>
