--- a/src/app/components/merchant-pages/merchant/merchant.component.html
+++ b/src/app/components/merchant-pages/merchant/merchant.component.html
@@ -6,9 +6,7 @@
                                 'price',
                                 'brand.name',
                                 'subCategory.category.name'
-                            ]" [paginator]="true" [rowsPerPageOptions]="[10, 20, 30]" [showCurrentPageReport]="true"
-                currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" selectionMode="multiple"
-                [rowHover]="true" dataKey="id">
+                            ]" [paginator]="false" selectionMode="multiple" [rowHover]="true" dataKey="id">
                 <ng-template pTemplate="header">
                     <tr>
                         <th pSortableColumn="merchantId">
@@ -54,6 +52,10 @@
                             <span class="p-column-title">Phone Number</span>
                             {{ product.phoneNumber }}
                         </td>
+                        <td>
+                            <span class="p-column-title">City</span>
+                            {{ product.cityName }}
+                        </td>
                         <td style="width: 14%; min-width: 10rem">
                             <span class="p-column-title">Rating</span>
                             <p-rating [ngModel]="product.rating || 0" [readonly]="true" [cancel]="false"></p-rating>
@@ -61,14 +63,15 @@
 
                         <td>
                             <div class="flex">
-                                <button pButton pRipple icon="pi pi-pencil"
-                                    class="p-button-rounded p-button-success mr-2"
-                                    (click)="onRowSelect(product)"></button>
+                                <button pButton pRipple icon="pi pi-ellipsis-h"
+                                    class="p-button-rounded p-button-text mr-2" (click)="onRowSelect(product)"></button>
                             </div>
                         </td>
                     </tr>
                 </ng-template>
             </p-table>
+            <p-paginator [alwaysShow]="false" (onPageChange)="onPageChange($event)" [first]="first" [rows]="10"
+                [totalRecords]="totalRecords"></p-paginator>
         </div>
     </div>
 </div>
