--- a/src/app/components/merchant-pages/live/live.component.html
+++ b/src/app/components/merchant-pages/live/live.component.html
@@ -16,7 +16,7 @@
                 <div *ngIf="!isLiveSuccess" class="col-12">
                     <div *ngIf="isSelectTitleLive">
                         <h5>Live Description</h5>
-                        <span class="p-float-label col-11">
+                        <span class="p-float-label col-12 col-md-8">
                             <h6 class="addressLabel ps-0">Live Title</h6>
                             <input type="text" pInputText class="w-full" [(ngModel)]="liveTitle" />
                         </span>
